# DTKWallpaperManager

./: CMakeLists.txt  README.md  resources.qrc
doc/: 详细说明文档.md
include/: downloadImage.h  fileRead.h  global.h  mainWindow.h
src/: downloadImage.cpp  fileRead.cpp  main.cpp  mainWindow.cpp
